Separate API and impl